--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ border-radius: 1px;
 	color: white;
 	z-index: 2;
 }
-.right-header .text:hover ,{
+.right-header .text:hover{
 	color: black;
 	text-shadow: 0.8px 0 0 black ;
 
