--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ html {
   font-size: 62.5%;
 }
 * {
+
   text-decoration: none;
   box-sizing: border-box;
 }
+
 body {
   font-family: "Poppins";
   font-style: normal;
@@ -14,19 +16,18 @@ body {
 .header {
   display: block;
   flex-direction: column;
-  width: 1440px;
-  height: 900px;
+  height: 9000px;
   opacity: 1;
   background-color: #fffcf4;
 }
 .header.header_top {
   box-sizing: content-box;
-  position: fixed;
-  z-index: 1;
+position: sticky;
+top: 0px;
+  z-index: 10;
   padding: 36px 0 8px 0px;
-  width: 1170px;
+  width: 1389px;
   height: 50px;
-
   left: 135px;
   flex-direction: row;
   justify-content: space-between;
@@ -109,15 +110,30 @@ body {
 }
 /* ------------------------------------------------------------------
  */
+ .bottom{
+  display: flex;
+ }
+ .header{
+  display:block;
+ }
+ .header_bottom{
+  margin-left: 130px;
+
+  width: 1389px;
+  height: 814px;
+  display: flex;
+ }
+
 .header_bottom.header_left {
-  width: 570px;
+  margin-left: 0px;
+  width: 800px;
   height: 685px;
   position: relative;
 }
 .header_bottom.header_left .big {
   width: 470px;
   height: 685px;
-  object-position: 500px;
+  object-position: -500px;
   border-radius: 20px;
   object-fit: cover;
   display: flex;
@@ -129,6 +145,7 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 270px;
+  left: 270px;
   height: 244px;
   position: absolute;
   background-color: white;
@@ -174,4 +191,137 @@ body {
 }
 .header_bottom.header_left .img-box.img-box3 {
   background-color: #ebeaff;
+}
+.header_bottom.header_right{
+  padding-top: 64px;
+  
+  margin-left: 0px;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.header_bottom.header_right .top{
+  font-family: "Sen";
+font-weight: 700;
+font-style: Bold;
+font-size: 5.8rem;
+line-height: 6.8rem;
+letter-spacing: -2%;
+
+}
+.header_bottom.header_right .text_bottom{
+  font-family: "Poppins";
+font-weight: 400;
+font-size: 1.8rem;
+line-height: 3rem;
+letter-spacing: 0%;
+color: #5F5B53;
+}
+.header_bottom.header_right .button-left{
+  font-family: "Poppins";
+font-weight: 600;
+font-style: SemiBold;
+font-size: 1.8rem;
+line-height: 3rem;
+letter-spacing: 0%;
+text-align: center;
+}
+.header_bottom.header_right .bottom_down{
+ display: flex;
+ align-items: center;
+}
+.header_bottom.header_right .out{
+  width: 180px;
+height: 64px;
+border-radius: 32px;
+background-color: #FFB900;
+}
+.header_bottom.header_right .out2{
+  width: 40px;
+height: 40px;
+opacity: 1;
+background: gray;
+border-radius: 50%;
+}
+.header_bottom.header_right .bottom_down h3{
+  font-family: "Poppins";
+font-weight: 600;
+font-style: "SemiBold";
+font-size: 18px;
+line-height: 30px;
+letter-spacing: 0%;
+}
+.header_bottom.header_right .button-left{
+
+  display: flex;
+
+  justify-content: center;
+
+}
+.header_bottom.header_right .button-left .text123{
+  position: absolute;
+font-family: "Poppins";
+font-weight: 600;
+font-style: "SemiBold";
+font-size: 18px;
+color: white;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: center;
+
+  align-self: center;
+}
+.header_bottom.header_right .button-right{
+  margin-left: 20px;
+  position: relative;
+  display: flex;
+align-content: center;
+justify-content: center;
+}
+.header_bottom.header_right .button-right .out3{
+  position: absolute;
+  align-self: center;
+  justify-self: center;
+}
+.header_bottom.header_right .bottom_down h3{
+  margin-left: 20px;
+  font-family: "Poppins";
+font-weight: 600;
+font-style: "SemiBold";
+font-size: 18px;
+line-height: 30px;
+letter-spacing: 0%;
+
+}
+.header_bottom.header_right .bottom{
+  font-family: "Poppins";
+font-weight: 400;
+font-style: "Regular";
+font-size: 18px;
+line-height: 30px;
+letter-spacing: 0%;
+
+  display: flex;
+  gap: 10px;
+}
+.header_bottom.header_right .bottom_down2{
+  color: #5F5B53;
+}
+.header_bottom.header_right .bottom .number1,.number2{
+  font-family: "Sen";
+font-weight: 700;
+font-style: Bold;
+font-size: 44px;
+line-height: 54px;
+letter-spacing: 0%;
+}
+.bottom p{
+  font-family: "Poppins";
+font-weight: 400;
+color: #5F5B53;
+font-size: 18px;
+line-height: 30px;
+letter-spacing: 0%;
+
 }
